--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,9 +1,9 @@
 ja:
   enums:
     order_history:
-      payment_method:
-        credit_card: "クレジットカード"
-        transfer: "銀行振込"
+      method_of_payment:
+        credit_card: クレジットカード
+        transfer: 銀行振込
   activerecord:
     errors:
       messages:
